--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </nav>
 
         <main>
-            <h2>Our Menu</h2>
+            <h2 class="text-center">Our Menu</h2>
             <div class="chicken">
                 <h3>Chicken</h3>
                 <p class="first">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga veniam eaque, tenetur praesentium vitae, ex illo, reiciendis consectetur non saepe ipsum nobis molestiae? Amet dignissimos nulla architecto, quod facere ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem facilis voluptatibus odio enim numquam? Obcaecati delectus maxime iusto, soluta autem ipsum eveniet. Exercitationem soluta a dolores ex! Placeat, labore voluptate.</p>
@@ -53,4 +53,7 @@
 
     </div>
 </body>
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </html>
